Client Timer added