@@ -1,3 +1,3 @@
 @echo off
 timeout 10
-java -jar "F:\Users\user\IdeaProjects\LabTesting\out\artifacts\LabTesting_jar\LabTesting.jar"
+java --module-path "C:\Users\admin\IdeaProjects\LabAuthentication\LabTesting\openjfx-17.0.1_windows-x64_bin-sdk\javafx-sdk-17.0.1\lib" --add-modules=javafx.controls,javafx.fxml -jar "C:\Users\admin\IdeaProjects\LabAuthentication\LabTesting\out\artifacts\LabTesting_jar\LabTesting.jar"
